--- a/static/css/m_style.css
+++ b/static/css/m_style.css
@@ -287,7 +287,7 @@ body,
 }
 
 .song_list_item {
-    height: 100%;
+    height: calc(100% - 190px);
     width: 98%;
     margin: 1% 1%;
     padding: 0;
@@ -361,6 +361,11 @@ body,
 .song_info {
     position: absolute;
     width: 70%;
+    max-height: 21px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    word-break: break-all;
     left: 20px;
     top: 5px;
     font-size: medium
