--- a/static/css/m_style.css
+++ b/static/css/m_style.css
@@ -366,7 +366,7 @@ body,
     white-space: nowrap;
     text-overflow: ellipsis;
     word-break: break-all;
-    left: 20px;
+    padding-left: 20px;
     top: 5px;
     font-size: medium
 }
@@ -377,7 +377,7 @@ body,
     width: 4px;
     height: 100%;
     background: blueviolet;
-    left: -8px;
+    left: 12px;
     border-radius: 5px;
     opacity: .4
 }
