--- a/static/css/style.css
+++ b/static/css/style.css
@@ -138,7 +138,7 @@ body {
 .song_info {
     position: absolute;
     width: 70%;
-    left: 20px;
+    padding-left: 20px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -153,7 +153,7 @@ body {
     width: 4px;
     height: 100%;
     background: blueviolet;
-    left: -8px;
+    left: 12px;
     border-radius: 5px;
     opacity: .4
 }
