Fix PC scaler UI BUG For
An important UI update that will fix page errors caused by PC system default scaler.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,20 @@
+/*预定义颜色*/
+:root {
+    --title: #000;
+    --line-color: blueviolet;
+    --all-text: grey;
+    --scroll-bar: rgba(138, 43, 226, .2);
+    --tag-text: rgb(86, 35, 133);
+    --tag-background: rgba(138, 43, 226, .2);
+    --song-card: rgba(249, 216, 255, .25);
+    --song-card-claim: rgba(249, 216, 255, .7);
+    --type: #D8BFD8;
+    --type-selected: #9370DB;
+    --button-color: #9370DB;
+}
+
+
+/*字体*/
 @font-face {
     font-family: "站酷";
     src: url(../font/t_min.ttf)
@@ -8,10 +25,12 @@
     src: url(../font/s_min.ttf)
 }
 
+
 html,
 body {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    min-width: 720px;
     margin: 0;
     padding: 0
 }
@@ -19,69 +38,291 @@ body {
 body {
     background-image: url(../img/background.png);
     background-size: cover;
+}
+
+.copy,
+body {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none
+}
+
+.title {
+    font-size: 1.2vw;
+    font-family: "站酷", sans-serif;
+    color: var(--title);
     position: relative;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none
+    font-weight: bolder;
+    height: 2vh;
+    line-height: 2vh;
+    top: 2.8vh;
+    left: 1vw;
 }
 
-.copy {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none
+.title::after {
+    position: absolute;
+    content: "";
+    width: 5vw;
+    height: 0.3vh;
+    background: var(--line-color);
+    left: 0;
+    opacity: .4;
+    bottom: -2px
 }
 
-.song_list,
-.bio_box {
-    position: fixed;
-    top: 30px;
-    bottom: 30px;
-    min-width: 410px
+.view {
+    position: relative;
+    overflow: hidden;
+    width: 90vw;
+    height: 92vh;
+    top: 3vh;
+    left: 5vw;
 }
 
-.song_list {
-    left: 5%;
-    height: calc(100% - 85px);
-    width: calc(85.7% - 360px);
+.card {
     border-radius: 2px;
     box-shadow: 1px 1px 5px #dcdcdc;
     background-color: rgba(255, 255, 255, .9)
 }
 
-.song_list_title {
-    display: inline-block;
-    height: 25px;
-    margin-top: 10px;
-    margin-left: 30px
+.view_bio,
+.view_song {
+    height: 92vh;
+    position: absolute;
+    top: 0;
 }
 
-.song_list_item {
-    height: calc(97% - 60px);
-    width: 98%;
-    margin: 3% 1%;
-    overflow: auto;
+.view_song {
+    width: 67.6vw;
+    left: 0;
+}
+
+.view_bio {
+    width: 22vw;
+    right: 0;
+}
+
+.bio,
+.search_box,
+.notice,
+.type_box {
+    width: 22vw;
+}
+
+.nickname,
+.sign,
+.notice,
+.user_data_title,
+.user_title_value {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    word-break: break-all;
+}
+
+.bio {
+    height: 40vh;
+}
+
+.search_box {
+    margin-top: 0.5vh;
+    height: 5.5vh;
+    overflow: hidden;
+}
+
+.notice_box {
+    margin-top: 0.5vh;
+    height: 11vh;
+    overflow: hidden;
+}
+
+.type_box {
+    margin-top: 0.5vh;
+    height: 34vh;
+    overflow: hidden;
+}
+
+.face {
+    width: 12vh;
+    height: 12vh;
+    margin: 5vh calc(11vw - 6vh) 0 calc(11vw - 6vh);
+    border-radius: 50%
+}
+
+.nickname {
+    font-size: 1.2vw;
+    font-family: "站酷";
+    font-weight: 750;
+    color: var(--title);
+    width: 16vw;
+    text-align: center;
+    margin: 0.4vh 3vw 0 3vw;
+    -webkit-line-clamp: 1;
+}
+
+.user_data_box {
+    width: 20vw;
+    height: 5vh;
+    margin: 1.5vh 1vw 0 1vw;
+    overflow: hidden;
+}
+
+.user_data_part {
+    width: calc((20vw - 2px) / 3);
+    height: 5vh;
+    float: left;
+    text-align: center
+}
+
+.user_data_cutline {
+    width: 1px;
+    height: 5vh;
+    float: left;
+    background-color: #dcdcdc
+}
+
+.user_data_title,
+.user_data_value {
+    font-family: "站酷";
+    font-weight: 750;
+    color: var(--title);
+    line-height: 2.45vh;
+    width: calc((20vw - 2px) / 3);
+    -webkit-line-clamp: 1;
+}
+
+.user_data_title {
+    margin-top: 0.1vh;
+    font-size: 1vw
+}
+
+.user_data_value {
+    font-size: 0.9vw
+}
+
+.sign {
+    font-size: 0.8vw;
+    width: 20vw;
+    margin: 1.3vh 1vw 0 1vw;
+    line-height: 2vh;
+    -webkit-line-clamp: 3;
+    color: var(--all-text);
+}
+
+.search_form {
+    height: 3.7vh;
+    width: 21vw;
+    margin: 0.85vh 0.5vw;
+    overflow: hidden;
+}
+
+.search_input {
+    height: 3.7vh;
+    width: 16vw;
+    line-height: 3vh;
+    font-size: 0.8vw;
+    float: left;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
+    font-family: "狮尾"
+}
+
+.search_input:focus {
+    outline: 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, .1);
+}
+
+.search_button {
+    width: 4vw;
+    height: 3.7vh;
+    line-height: 3vh;
+    font-size: 0.8vw;
+    background-color: var(--button-color);
+    color: white;
+    border: 0;
+    border-radius: 5px;
+    margin-left: 0.5vw;
+    cursor: pointer;
+    letter-spacing: 5px;
+    float: left;
+    outline: 0;
+    font-family: "狮尾"
+}
+
+.search_button:hover {
+    background-color: var(--button-color);
+}
+
+.notice {
+    width: 20vw;
+    height: 8vh;
+    margin: 1.2vh 1vw;
+    -webkit-line-clamp: 4;
+    line-height: 2vh;
+    font-size: 0.8vw;
+    color: var(--all-text);
+}
+
+.type_list {
+    overflow: hidden;
+    width: 20vw;
+    height: 29vh;
+    margin: 4vh 0 0 0.1vw;
+}
+
+.type,
+.type_selected {
+    text-align: center;
+    line-height: 3.5vh;
+    min-width: 2.5vh;
+    font-size: large;
+    letter-spacing: 5px;
+    border-radius: 5px;
+    border: solid;
+    border-width: 0.3vh 0.8vw;
+    margin: 5px 10px 0 0;
+    overflow: hidden;
+    float: left;
+    list-style-type: none
+}
+
+.type {
+    background-color: var(--type);
+    border-color: var(--type);
+    color: #000
+}
+
+.type_selected {
+    background-color: var(--type-selected);
+    border-color: var(--type-selected);
+    color: #fff
+}
+
+.song_list {
+    width: 64vw;
+    height: 84vh;
     padding: 0;
-    display: inline-block
+    margin: 4.6vh 1.8vw 0 1.8vw;
+    overflow: auto;
 }
 
-.song_list_item::-webkit-scrollbar {
-    width: 15px;
+.song_list::-webkit-scrollbar {
+    width: 0.7vw;
     height: 1px
 }
 
-.song_list_item::-webkit-scrollbar-thumb {
+.song_list::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background-color: rgba(138, 43, 226, .2);
+    background-color: var(--scroll-bar);
     background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2)25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2)50%, rgba(255, 255, 255, .2)75%, transparent 75%, transparent)
 }
 
-.song_list_item::-webkit-scrollbar-track {
+.song_list::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px rgba(255, 255, 255, .2);
     background: #ededed;
     border-radius: 10px
@@ -90,40 +331,40 @@ body {
 .song_item {
     float: left;
     position: relative;
-    margin: 5px 10px;
-    width: calc(33% - 20px);
+    margin: 0.5vh 0.5vw;
+    width: 20vw;
     min-width: 330px;
-    height: 100px;
-    background: rgba(249, 216, 255, .25);
+    height: 9vh;
+    background: var(--song-card);
     list-style-type: none;
     border-radius: 5px
 }
 
 .song_item_claim {
-    background: rgba(249, 216, 255, .7)
+    background: var(--song-card-claim)
 }
 
 .claim {
     position: absolute;
-    right: 20px;
-    top: 5px;
-    font-size: large
+    right: 0.3vw;
+    top: 0.5vh;
+    font-size: 0.8vw
 }
 
 .info_tag_area {
     position: absolute;
-    margin: 5px 10px;
-    width: calc(100% - 20px);
+    margin: 0.5vh 0.5vw;
+    width: 18vw;
     display: inline-block;
-    bottom: 10px
+    bottom: 0.5vh
 }
 
 .info_tag {
     text-align: center;
-    line-height: 25px;
+    line-height: 2.5vh;
     min-width: 20px;
-    font-size: small;
-    font-weight: bold;
+    font-size: 0.7vw;
+    font-weight: 600;
     padding: 0 10px 0 10px;
     letter-spacing: 5px;
     border-radius: 5px;
@@ -131,8 +372,8 @@ body {
     overflow: hidden;
     float: left;
     list-style-type: none;
-    background-color: rgba(138, 43, 226, .2);
-    color: rgb(86, 35, 133)
+    background-color: var(--tag-background);
+    color: var(--tag-text)
 }
 
 .song_info {
@@ -152,245 +393,34 @@ body {
     content: "";
     width: 4px;
     height: 100%;
-    background: blueviolet;
+    background: var(--line-color);
     left: 12px;
     border-radius: 5px;
     opacity: .4
 }
 
-.bio_nick_name,
-.bio_sign,
-.notice {
-    overflow: hidden;
-    text-overflow: ellipsis
-}
 
-.bio_box {
-    right: 5%;
-    width: 22%;
-    height: calc(100% - 90px)
-}
-
-.bio_card {
-    width: 100%;
-    border-radius: 2px;
-    border: 0;
-    box-shadow: 1px 1px 5px #dcdcdc;
-    background-color: rgba(255, 255, 255, .9)
-}
-
-.bio_profile {
-    height: calc(40% - 30px);
-    width: calc(100% - 40px);
-    padding: 20px 20px
-}
-
-.bio_head_img {
-    position: absolute;
-    width: 120px;
-    height: 120px;
-    top: 8%;
-    left: calc(30% + 20px);
-    border-radius: 50%
-}
-
-.bio_nick_name {
-    position: absolute;
-    font-size: x-large;
-    font-family: "站酷";
-    font-weight: 750;
-    width: 300px;
-    text-align: center;
-    top: calc(8% + 130px);
-    left: calc(50% - 150px)
-}
-
-.bio_item {
-    position: absolute;
-    width: 80%;
-    height: 50px;
-    top: calc(8% + 180px);
-    left: 10%;
-    display: inline-block
-}
-
-.bio_item_part {
-    width: calc((100% - 2px) / 3);
-    height: 100%;
-    float: left;
-    text-align: center
-}
-
-.bio_item_line {
-    width: 1px;
-    height: 100%;
-    float: left;
-    background-color: #dcdcdc
-}
-
-.bio_item_title,
-.bio_item_value {
-    font-family: "站酷";
-    font-weight: 750;
-    color: #191919
-}
-
-.bio_item_title {
-    margin-top: 5px;
-    font-size: larger
-}
-
-.bio_item_value {
-    font-size: large
-}
-
-.bio_sign {
-    position: absolute;
-    top: calc(8% + 250px);
-    width: 80%;
-    left: calc((100% - 80%) / 2);
-    color: grey
-}
-
-.notice {
-    width: calc(100% - 40px);
-    height: 7%;
-    margin-top: 2%;
-    font-size: medium;
-    padding: 20px 20px;
-    color: gray
-}
-
-.search_box {
-    width: 100%;
-    height: 6%;
-    margin-top: 2%
-}
-
-.search_form {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center
-}
-
-.search_input {
-    padding: 10px;
-    font-size: 16px;
-    border: 0;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
-    width: calc(80% - 50px);
-    transition: box-shadow .3s ease;
-    font-family: "狮尾"
-}
-
-.search_input:focus {
-    outline: 0;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, .1)
-}
-
-.search_button {
-    width: 20%;
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #9370DB;
-    color: white;
-    border: 0;
-    border-radius: 5px;
-    margin-left: 10px;
-    cursor: pointer;
-    letter-spacing: 5px;
-    transition: background-color .3s ease;
-    outline: 0;
-    font-family: "狮尾"
-}
-
-.search_button:hover {
-    background-color: #9370DB
-}
-
-.tag_list {
-    height: calc(100% - 60px);
-    width: 100%;
-    overflow: auto;
-    padding: 0;
-    display: inline-block
-}
-
-.tag_list::-webkit-scrollbar {
-    width: 0
-}
-
-.tag_item {
-    height: 35%;
-    margin-top: 2%
-}
-
-.tag,
-.tag_selected {
-    text-align: center;
-    line-height: 40px;
-    min-width: 50px;
-    font-size: large;
-    padding: 0 15px 0 15px;
-    letter-spacing: 5px;
-    border-radius: 5px;
-    margin: 5px 10px 0 0;
-    overflow: hidden;
-    float: left;
-    list-style-type: none
-}
-
-.tag {
-    background-color: #D8BFD8;
-    color: #000
-}
-
-.tag_selected {
-    background-color: #9370DB;
-    color: #fff
-}
-
-.title {
-    font-size: x-large;
-    font-family: "站酷", sans-serif;
-    position: relative;
-    font-weight: bolder;
-    top: 2%
-}
-
-.title::after {
-    position: absolute;
-    content: "";
-    width: 200%;
-    height: 3px;
-    background: blueviolet;
-    left: 1%;
-    opacity: .4;
-    bottom: -2px
-}
-
+/*页脚*/
 footer {
     position: fixed;
+    overflow: hidden;
     width: 100%;
+    height: 4vh;
     bottom: 0;
     border-radius: 2px;
     border: 0;
     box-shadow: 1px 1px 5px #dcdcdc;
     background-color: rgba(255, 255, 255, .9);
-    color: gray;
-    padding: 10px;
-    line-height: 20px;
     text-align: center;
-    font-size: smaller
+    padding: 0;
 }
 
 nav ul {
-    list-style-type: none;
     margin: 0;
-    padding: 0
+    list-style-type: none;
+    color: gray;
+    line-height: 4vh;
+    font-size: smaller;
 }
 
 nav ul li {
@@ -404,5 +434,5 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: blueviolet
+    color: var(--type-selected)
 }
