--- a/static/css/m_style.css
+++ b/static/css/m_style.css
@@ -1,3 +1,22 @@
+/*预定义颜色*/
+:root {
+    --line-color: blueviolet;
+    --bio-card:rgba(138,43,226,.2);
+    --nickname-color: #9370DB;
+    --user-data-text: rgb(89, 69, 129);
+    --all-text: grey;
+    --scroll-bar: rgba(138, 43, 226, .2);
+    --tag-text: rgb(86, 35, 133);
+    --tag-background: rgba(138, 43, 226, .2);
+    --song-card: rgba(249, 216, 255, .25);
+    --song-card-claim: rgba(249, 216, 255, .7);
+    --type: #D8BFD8;
+    --type-selected: #9370DB;
+    --button-color: #9370DB;
+    --tool-box: #c9b3f4;
+}
+
+/*字体*/
 @font-face {
     font-family: "站酷";
     src: url(../font/t_min.ttf)
@@ -8,6 +27,8 @@
     src: url(../font/s_min.ttf)
 }
 
+
+/*动画*/
 @keyframes rotate {
     0% {
         transform: rotate(0)
@@ -95,8 +116,8 @@ body,
     position: absolute;
     width: 100%;
     height: 300px;
-    background-color: rgba(138, 43, 226, .2);
-    color: #9370DB
+    background-color: var(--bio-card);
+    color: var(--nickname-color)
 }
 
 .bio_head_img {
@@ -125,7 +146,7 @@ body,
     margin-top: 10px;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     word-break: break-all;
     text-align: center
@@ -164,7 +185,7 @@ body,
     line-height: 30px;
     font-family: "站酷";
     font-weight: 750;
-    color: #594581
+    color: var(--user-data-text)
 }
 
 .bio_item_title {
@@ -216,7 +237,7 @@ body,
     text-align: center;
     display: inline-block;
     border: 0;
-    background-color: #c9b3f4;
+    background-color: var(--tool-box);
     cursor: pointer
 }
 
@@ -254,15 +275,15 @@ body,
     border-radius: 5px
 }
 
-.tag_list {
+.type_list {
     width: calc(100% - 30px);
     margin: 10px 0 0 0;
     padding: 0 15px;
     overflow: hidden
 }
 
-.tag,
-.tag_selected {
+.type,
+.type_selected {
     text-align: center;
     line-height: 30px;
     min-width: 30px;
@@ -276,18 +297,18 @@ body,
     list-style-type: none
 }
 
-.tag {
-    background-color: #D8BFD8;
+.type {
+    background-color: var(--type);
     color: #000
 }
 
-.tag_selected {
-    background-color: #9370DB;
+.type_selected {
+    background-color: var(--type-selected);
     color: #fff
 }
 
 .song_list_item {
-    height: calc(100% - 190px);
+    height: calc(100% - 120px);
     width: 98%;
     margin: 1% 1%;
     padding: 0;
@@ -301,7 +322,7 @@ body,
 
 .song_list_item::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background-color: rgba(138, 43, 226, .2);
+    background-color: var(--scroll-bar);
     background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2)25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2)50%, rgba(255, 255, 255, .2)75%, transparent 75%, transparent)
 }
 
@@ -317,13 +338,13 @@ body,
     margin: 5px 10px;
     width: calc(100% - 20px);
     height: 60px;
-    background: rgba(249, 216, 255, .25);
+    background: var(--song-card);
     list-style-type: none;
     border-radius: 5px
 }
 
 .song_item_claim {
-    background: rgba(249, 216, 255, .7)
+    background: var(--song-card-claim)
 }
 
 .claim {
@@ -354,8 +375,8 @@ body,
     overflow: hidden;
     float: left;
     list-style-type: none;
-    background-color: rgba(138, 43, 226, .2);
-    color: rgb(86, 35, 133)
+    background-color: var(--tag-background);
+    color: var(--tag-text)
 }
 
 .song_info {
@@ -376,7 +397,7 @@ body,
     content: "";
     width: 4px;
     height: 100%;
-    background: blueviolet;
+    background: var(--line-color);
     left: 12px;
     border-radius: 5px;
     opacity: .4
@@ -395,7 +416,7 @@ body,
 .search_input {
     padding: 5px;
     font-size: smaller;
-    border: 2px solid #9370DB;
+    border: 2px solid var(--button-color);
     border-radius: 15px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
     width: calc(87% - 10px);
@@ -413,7 +434,7 @@ body,
     line-height: 27px;
     text-align: center;
     font-size: smaller;
-    background-color: #9370DB;
+    background-color: var(--button-color);
     color: white;
     border: 0;
     border-radius: 15px;
@@ -427,7 +448,7 @@ body,
 }
 
 .search_button:hover {
-    background-color: #9370DB
+    background-color: var(--button-color)
 }
 
 footer {
@@ -466,5 +487,5 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: blueviolet
+    color: var(--button-color)
 }
